[package]
name    = "tweleter2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow              = { version = "1.0.68", features = ["backtrace"] }
clap                = { version = "4.2", features = ["derive", "unicode", "env"] }
clap-verbosity-flag = "2.0.0"
flexi_logger        = { version = "0.26.0", features = ["specfile", "async"] }
human-panic         = "1.1.0"
serde               = { version = "1.0.159", features = ["derive"] }
log                 = "0.4.17"
serde_json          = "1.0.96"
dotenvy             = { version = "0.15.7" }
rusqlite            = { version = "0.29.0", features = ["bundled"] }
curl                = "0.4.44"
